# signified-bench

./: .gitignore  README.md  pyproject.toml
src/signified_bench/: __init__.py  _benchmarking.py  _pytest_benchmarks.py  _pytest_compare_benchmarks.py  compare.py  run.py  scenarios.py  score.py
tests/: signified-vs-reaktiv-performance.md  test_benchmarks.py  test_compare.py  test_compare_benchmarks.py  test_run.py  test_scenarios.py  test_score.py
