[project]
name = "signified-bench"
version = "0.1.1"
description = "Cross-library compare benchmarks for signified"
readme = "README.md"
authors = [
    { name = "Doug Mercer", email = "dougmerceryt@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "signified",
    "pytest>=8.4.0",
    "pytest-benchmark>=5.1.0",
    "pytest-codspeed>=4.3.0",
]

[project.scripts]
signified-bench = "signified_bench.run:main"

[project.optional-dependencies]
compare = [
    "reaktiv>=0.19.1",
]

[dependency-groups]
test = [
    "pytest>=8.4.0",
]

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
addopts = '-m "not benchmark"'
markers = [
    "benchmark: performance-focused tests and microbench harnesses",
]
testpaths = [
    "tests",
]
