[project]
name = "signified-bench"
version = "0.1.2"
description = "Cross-library compare benchmarks for signified"
readme = "README.md"
authors = [
    { name = "Doug Mercer", email = "dougmerceryt@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pytest>=8.4.0",
    "pytest-benchmark>=5.1.0",
    "pytest-codspeed>=4.3.0",
]

[project.scripts]
signified-bench = "signified_bench.run:main"

[project.optional-dependencies]
compare = [
    "param>=2.3.3",
    "reaktiv>=0.19.1",
    "signals>=0.1.0a7",
]
# Run signified-bench via uv run --with signified-bench, and assume that signified
# is already in your environment

[dependency-groups]
test = [
    "pytest>=8.4.0",
]

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
addopts = '-m "not benchmark"'
markers = [
    "benchmark: performance-focused tests and microbench harnesses",
]
testpaths = [
    "tests",
]
